objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>IsFree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Free?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Number__c</fullName>
        <displayFormat>T-{000000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Transaction_Time__c</fullName>
        <label>Transaction Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase,Return,Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Transaction</label>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>